schemars/tests/ui/transform_str.stderr
error: Expected a `fn(&mut Schema)` or other value implementing `schemars::transform::Transform`, found `&str`.
       Did you mean `#[cocogitto_schemars(transform = x)]`?
 --> tests/ui/transform_str.rs:4:24
  |
4 | #[cocogitto_schemars(transform = "x")]
  |                        ^^^
