schemars/tests/ui/transform_str.rs
use cocogitto_schemars::JsonSchema;

#[derive(JsonSchema)]
#[cocogitto_schemars(transform = "x")]
pub struct Struct;

fn main() {}
